--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@react-native-vector-icons/ionicons": "^12.0.1",
     "@react-navigation/bottom-tabs": "^7.3.15",
     "@react-navigation/native": "^7.1.11",
-    "@react-navigation/native-stack": "^7.3.16",
+    "@react-navigation/native-stack": "^7.3.18",
+    "@react-navigation/stack": "^7.3.6",
     "@reduxjs/toolkit": "^2.8.2",
     "@supabase/supabase-js": "^2.50.0",
     "expo": "~53.0.11",
@@ -23,7 +24,8 @@
     "moment": "^2.30.1",
     "react": "19.0.0",
     "react-native": "0.79.3",
-    "react-native-safe-area-context": "5.4.0",
+    "react-native-modal": "^14.0.0-rc.1",
+    "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-redux": "^9.2.0",
