--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "@react-navigation/stack": "^7.3.6",
     "@reduxjs/toolkit": "^2.8.2",
     "@supabase/supabase-js": "^2.50.0",
+    "base-64": "^1.0.0",
     "expo": "~53.0.11",
+    "expo-file-system": "~18.1.10",
+    "expo-image-manipulator": "~13.1.7",
+    "expo-image-picker": "~16.1.4",
     "expo-status-bar": "~2.2.3",
     "moment": "^2.30.1",
     "react": "19.0.0",
